Use base product information to retrieve the product ids